--- a/min.html
+++ b/min.html
@@ -215,6 +215,15 @@
       max-height:100%; 
     }
     
+    .credits {
+      margin-top: 10px;
+      text-align: center;
+      font-size: 0.8em;
+    }
+    .credits a {
+      text-decoration: underline;
+    }
+
     /** Misc gunk **/
 
     //style range slider
@@ -292,6 +301,11 @@
   <div class=timeControls>
     <div class='distance'>-</div>
     <input type='range' min=0 max=1000 class='timeslide' value=0 >
+  </div>
+  
+  <div class=credits>
+    <p>Created by Dave Lyons(<a href='https://twitter.com/loadedfingers'>@loadedfingers</a>), src at <a href='http://github.com/dalyons/where-is-dave'>Github</a>
+    </p>
   </div>
   
   <script>
